--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 /* Div's attributes */
 #loginBox{
    	background-color: #6ecae6; 
@@ -11,6 +10,11 @@
    	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);   
 }
 /* Text and input box attributes */
+h4{
+	color: #008CBA;
+	font-style: oblique;
+	letter-spacing: 3px;
+}
 h2{
 	text-transform: uppercase;
 }
