--- a/style.css
+++ b/style.css
@@ -30,6 +30,16 @@ input{
 	width: 300px;
    	height: 150px; 
 }
+/* Input boxes from InputCard.jsp */
+#inputOne{
+	margin-left: 2px;
+}
+#inputTwo{
+	margin-left: 2px;
+}
+#inputThree{
+	margin-left: 2px;
+}
 /* Button's look */
 #subData{
    	background-color: #b9b7b6; 
@@ -42,4 +52,10 @@ input{
    	margin-left: 190px; 
    	margin-top: 8px; 
    	margin-right: 45px; 
+}
+#InputcardTwo{
+   	background-color: green; 
+   	border: none;
+   	margin-left: 290px; 
+   	margin-top: 80px; 
 }
